maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:17: error: not found: value etat
    etat = 1
    ^